--- a/src/lib/components/Breadcrumbs/Breadcrumbs.scss
+++ b/src/lib/components/Breadcrumbs/Breadcrumbs.scss
@@ -1,7 +1,8 @@
-@import "../../../assets/_constants.scss";
+@import "../../../assets/constants";
 
 .breadcrumbs {
   margin: var(--padding-md) 0;
+  min-height: 1px;
 
   ol {
     list-style: none;
