--- a/src/lib/components/Expander/Expander.scss
+++ b/src/lib/components/Expander/Expander.scss
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: space-between;
     gap: var(--padding-md);
-    padding: var(--padding-md);
+    padding: var(--padding-sm);
     list-style: none;
 
     &::-webkit-details-marker {
@@ -31,6 +31,6 @@
   .expander-body {
     display: flow-root;
     border-top: 1px solid var(--border-color);
-    padding: 0 var(--padding-md);
+    padding: 0 var(--padding-sm);
   }
 }
