--- a/src/lib/components/Alert/Alert.scss
+++ b/src/lib/components/Alert/Alert.scss
@@ -1,20 +1,20 @@
-@import "../../../assets/_constants.scss";
+@use "../../../assets/constants";
 
 .alert {
-  border-radius: $border-radius;
+  border-radius: constants.$border-radius;
   padding: 0 var(--padding-md);
   margin-bottom: var(--padding-md);
   display: flex;
   align-items: baseline;
 
   &.type-info {
-    background: $bg-info;
+    background: constants.$bg-info;
   }
   &.type-danger {
-    background: $bg-danger;
+    background: constants.$bg-danger;
   }
   &.type-success {
-    background: $bg-success;
+    background: constants.$bg-success;
   }
   
   & .alert-icon {
