--- a/src/lib/components/ArticleBody/ArticleBody.scss
+++ b/src/lib/components/ArticleBody/ArticleBody.scss
@@ -1,9 +1,9 @@
-@import "../../../assets/_constants.scss";
+@use "../../../assets/constants";
 
 .article-body {
   width: 100%;
   display: flow-root;
-  font-size: $font-size-article;
+  font-size: constants.$font-size-article;
 
   .page-title {
     border-bottom: 1px solid var(--border-color);;
@@ -48,7 +48,7 @@
     background: var(--bg-overlay);
     border: 1px solid var(--border-color);
     border-bottom-width: 0;
-    border-radius: $border-radius;
+    border-radius: constants.$border-radius;
     overflow: hidden;
     margin: 0 0 var(--padding-md) var(--padding-md);
     
@@ -91,7 +91,7 @@
       width: fit-content;
     }
 
-    @include mobile-xs {
+    @include constants.mobile-xs {
       float: none;
       clear: none;
       margin-left: 0;
@@ -105,7 +105,7 @@
     width: auto;
     max-width: 100%;
     // max-height: 400px;
-    transition: filter $transition-time-interactive;
+    transition: filter constants.$transition-time-interactive;
   }
 
   a:hover img, a:hover video {
