--- a/src/lib/components/ArticleMain/ArticleMain.scss
+++ b/src/lib/components/ArticleMain/ArticleMain.scss
@@ -1,3 +1,5 @@
+@use "../../../assets/constants";
+
 .article-main {
   display: flex;
   flex-direction: row;
@@ -9,7 +11,7 @@
     display: none;
   }
 
-  @include tablet {
+  @include constants.tablet {
     .toc-column {
       display: none;
     }
@@ -22,7 +24,7 @@
     max-width: min(100%, 80em);
     padding: 0 var(--padding-lg);
 
-    @include mobile {
+    @include constants.mobile {
       padding: 0 var(--padding-md);
     }
   }
