Fix long table of contents sidebar not scrolling

--- a/src/lib/components/ArticleMain/ArticleMain.scss
+++ b/src/lib/components/ArticleMain/ArticleMain.scss
@@ -32,6 +32,7 @@
   .toc-column {
     position: sticky;
     top: 0;
+    height: 100vh;
     overflow-y: auto;
     width: 26em;
     min-width: 12em;
